# gameprogcpp-code

./: .gitignore  INSTALL_MACOS_AND_LINUX.md  INSTALL_MACOS_ARM.md
Chapter01/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
Chapter01/.cache/clangd/index/: Game.cpp.85518969166E8EA2.idx  Game.h.82B7469B2556E478.idx  Main.cpp.7A3205773EE8BF71.idx
Chapter02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmds.txt  compile_commands.json  compile_commands.json.bak
Chapter02/.cache/clangd/index/: Actor.cpp.B890051003B4DEC8.idx  Actor.h.FB1ADEA5ADEDC5F7.idx  AnimSpriteComponent.cpp.3FE14EE541E198B3.idx  AnimSpriteComponent.h.CAB89931E3BD2AC6.idx  BGSpriteComponent.cpp.DC2E1757515479BF.idx  BGSpriteComponent.h.70629395C9DCC7E3.idx  Component.cpp.6E2417CDF18A481B.idx  Component.h.A7A3424E41FA3265.idx  Game.cpp.BDC3BAB5CA9BBBBD.idx  Game.h.03EA270C020803C2.idx  Main.cpp.FDDA8198E51EB753.idx  Math.cpp.DF3EEE9A8F7E8C7C.idx  Math.h.5ECA2AFE7D7C5188.idx  Ship.cpp.943208BB541F92C1.idx  Ship.h.302FA8E07F21854B.idx  SpriteComponent.cpp.2D560B9674A039F0.idx  SpriteComponent.h.DBD8891FF6EEF768.idx
Chapter02/.xmake/macosx/arm64/: xmake.conf
Chapter02/.xmake/macosx/arm64/cache/: detect  toolchain
Chapter03/: CMakeLists.txt  build.sh
Chapter04/: AIComponent.cpp  AIState.cpp  CMakeLists.txt
Chapter05/: CMakeLists.txt
Chapter06/: CMakeLists.txt  build.sh
Chapter07/: AudioSystem.cpp  CMakeLists.txt
Chapter08/: CMakeLists.txt
Chapter14/: .gitignore  AudioSystem.cpp  CMakeCache.txt  CMakeLists.txt  build.sh  cmake_install.cmake
Chapter14/.cache/clangd/index/: Actor.cpp.FE85B2D043927F36.idx  Actor.h.10C5A792952ABD62.idx  Animation.cpp.FCDC729DE4DA3B80.idx  Animation.h.B312ADD3FB9F72B5.idx  AudioComponent.cpp.CFB2581E11DA554F.idx  AudioComponent.h.D943A10360780511.idx  AudioSystem.cpp.CE267F54FF3B2F68.idx  AudioSystem.h.0C4A51BBAD20CDE6.idx  BallActor.cpp.84008F7802B88506.idx  BallActor.h.14298BE24705388D.idx  BallMove.cpp.BE32F2136F553A5A.idx  BallMove.h.D4BC05E988C3A611.idx  BoneTransform.cpp.F504E5C90AA2B7E5.idx  BoneTransform.h.BE1ED7EF009CC588.idx  BoxComponent.cpp.E1DC5A48073A3821.idx  BoxComponent.h.1A12C469C6FCCA8C.idx  CameraComponent.cpp.1E2C04AB38FC7C85.idx  CameraComponent.h.F6AC7E637A9F8DBD.idx  Collision.cpp.EED25FAA61555100.idx  Collision.h.BFC30D08C17D0974.idx  Component.cpp.58596EE9C6A8D5F7.idx  Component.h.AD464D14500E06D8.idx  DialogBox.cpp.272ADD7AA031DFBD.idx  DialogBox.h.1C4599A9CA33B437.idx  FollowActor.cpp.A560739ED89EE7E1.idx  FollowActor.h.B367A25168D012C1.idx  FollowCamera.cpp.6392FC6EDC791E13.idx  FollowCamera.h.C8A091A42A9B6499.idx  Font.cpp.93B9FB884D804486.idx  Font.h.2FA3223A35DEB0D6.idx  GBuffer.cpp.DD51C67F55EBF77B.idx  GBuffer.h.5F30280317E805AA.idx  Game.cpp.4E7D5F049FBE81B3.idx  Game.h.229E28E1293108CB.idx  HUD.cpp.8BAB994D8E48E602.idx  HUD.h.47F92E6534D0BCB1.idx  LevelLoader.cpp.C8368113B492758E.idx  LevelLoader.h.5840D3556BF3A439.idx  Main.cpp.7568016C51594C1B.idx  Math.cpp.15EBFC699394ADB7.idx  (+40 more)
